--- a/src/app/add-product/add-product.component.html
+++ b/src/app/add-product/add-product.component.html
@@ -1,6 +1,6 @@
 <div class="main_div">
     <form>
-        <h1 class="main_heading">Add New Sub Product</h1>
+        <h1 class="main_heading">Add New Product</h1>
 
         <div class="form_outer_div">
             <div class="form_inner_div">
