--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -60,7 +60,7 @@
 
                 <h1 class="product_name">{{item.productName}} {{item.modelName}}
                 </h1>
-                <p class="product_price">Price: ₹{{item.price}}</p>
+                <p class="product_price">Price: ₹{{item.price|number}}</p>
                 <p class="product_available_quantity">Available Quantity: {{item.availableStock}}</p>
 
                 <!-- <button style="height: 40px; border-radius: 15px;background-color: blue;color: aqua;">Add To Cart</button> -->
