--- a/src/app/product-page/product-page.component.html
+++ b/src/app/product-page/product-page.component.html
@@ -31,7 +31,7 @@
 
     </div>
     <div class="price_div">
-        <h2>Price: ₹{{price}}</h2>
+        <h2>Price: ₹{{price | number}}</h2>
     </div>
     <div class="cart_button_div">
         <button class="add_cart_button" (click)="addToCart()">
