--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -69,9 +69,11 @@
     align-items: center;
     margin: 50px;
 }
-.item_data_div_main:hover{
-    box-shadow: 0 0 20px rgba(33,33,33,.2); 
-    border-radius: 60px;
+.item_image:hover{
+    box-shadow: 0 0 20px red; 
+    border-radius: 50%;
+    height: 200px; 
+    width: 200px;
 }
 
 .item_image{
